@@ -5,7 +5,7 @@ use inc::Module::Install;
 
 # Definition.
 abstract 'Perl module for rewrite die by err from Error::Pure module.';
-author 'Michal Spacek <skim@cpan.org>';
+author 'Michal Josef Spacek <skim@cpan.org>';
 author_requires 'English' => 0;
 author_requires 'File::Object' => 0.03;
 author_requires 'Test::Pod' => 0;
