@@ -67,12 +67,12 @@ REPOSITORY
     <https://github.com/michal-josef-spacek/Error-Pure-Always>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © 2012-2015 Michal Špaček
+    © 2012-2015 Michal Josef Špaček
 
     BSD 2-Clause License
 
