@@ -2,6 +2,7 @@
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.19 version.
  - Update author github username.
+ - Update author username.
 
 0.06 2015-09-16T14:59:35+02:00
  - Improve SEE ALSO section in doc.
